@@ -1,6 +1,7 @@
 FOR 0.8
  - wipe the allocated structures after use (memset) and make sure optimization
-   does not remove these memsets.
+   does not remove these memsets (copy explicit_bzero from openbsd).
+ - find out if there is a way to override the ncurses internal representation
  - test the wiping of the tmp file by mounting .mdp to a small partition that
    could be analyzed.
  - tmp file should be deleted regardless of previous errors.
@@ -24,7 +25,9 @@ FOR 0.8
     - timeouts on most fork'd programs.
     - random password generator with custom profiles (mdp gen).
     - process name override (tbd)
+    - zero out passwords in memory (explicit_bzero)
  - An option to default all searches to regexes.
+ - make sure the regex functions are not keeping anything in memory.
 
 
 MEDIUM TERM DEV
